--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,10 @@
 body {
-    background: rgb(85, 144, 189);
+    background: rgb(189, 85, 172);
     background: linear-gradient(
         90deg,
-        rgba(85, 144, 189, 1) 0%,
-        rgba(108, 183, 240, 1) 54%,
-        rgba(182, 216, 242, 1) 82%
+        rgb(151, 85, 189) 0%,
+        rgb(240, 108, 211) 54%,
+        rgb(242, 182, 234) 82%
     );
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -14,6 +14,7 @@ body {
 .title {
     color: white;
     text-align: center;
+    margin-top: 20px;
 }
 
 .footer {
